# FiscalFragment-SelicIndex

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
scripts/: compliance.lua
src/: main.cpp
src/api/: SelicClient.cpp  SelicClient.hpp
tests/: test_lua.cpp  test_main.cpp
